--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -120,7 +120,7 @@ Across the world several warehouses are located. For simplification, these wareh
 
 Drones can unexpectedly crash and fail. The drone is then written off and the cost of a drone is subtracted from the profit. Drones are also constrained by their batteries, they only have a limited range before they need to charge. Whenever the battery level gets very low, the chances of crashes increase, as the power that comes from the batteries becomes less and less stable. Drones can charge their batteries at the warehouses for a certain cost. They will intelligently choose a route when delivering a package to try as much as possible to avoid having a low battery.
 
-A client has only one order and when that order is delivered, the client stops participating. Client with multiple orders can be reduced to this model by creating multiple clients with one order each. The order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price.
+A client has only one order and when that order is delivered, the client stops participating. Client with multiple orders can be reduced to this model by creating multiple clients with one order each. The order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price. There are both clients that are initially present in the world and clients that appear randomly afterwards.
 
 For simplification, all agents are completely aware of the whole world and can send messages to all other agents. 
 
@@ -128,23 +128,20 @@ When clients enter the world, they will act as managers and broadcast their task
 
 Drones always act as contractors. Upon receipt of a task announcement, they calculate the bid they would be willing to make. This bid is based on the estimated minimal cost for a drone to serve the client. The estimated cost consists of four parts: the cost to buy the package from a warehouse; the cost of charging for the battery drain caused by moving between the drone's current location, the warehouse, the client and back to a warehouse to charge; the probabilistic cost of a drone failure; and the price the client is willing to pay (which is subtracted from the other costs). The drone will decide for which warehouse this combined cost is the lowest and submit that as its bid, on the condition that the cost is lower than the fine (then it would just be better not to bother delivering).
 
-In CNET, only one bid per opportunity (tick) is allowed, so the drone bids on the task for which its cost is the lowest of all received task announcements. Afterwards the drone is committed to that task and cannot bid on other tasks until it is either awarded the task and execution is complete, or until the client explicitly refuses the bid. In the original CNET protocol, a drone would be allowed to bid again at the next tick. \proposalV{Although \cite{CNET} suggests that this might cause significant delays in the system, due to the fact that tasks do not have a bidding expiration time, that clients immediately award contracts if possible and that drones only have one resource, i.e. they can only serve one client at a time, we feel that it does not have as significant an effect.} \commentV{local scheduler vermelden? zie proposal by Yens CNET} In CNCP and DynCNET, the drone bids on every incoming task while it is not committed to a contract.
+In CNET, only one bid per opportunity (tick) is allowed, so the drone bids on the task for which its cost is the lowest of all received task announcements. Afterwards the drone is committed to that task and cannot bid on other tasks until it is either awarded the task and execution is complete, or until the client explicitly refuses the bid. In the original CNET protocol, a drone would be allowed to bid again at the next tick. Although \cite{CNET} suggests that this might cause significant delays in the system, due to the fact that tasks do not have a bidding expiration time, that clients immediately award contracts if possible and that drones only have one resource, i.e. they can only serve one client at a time, we feel that it does not have as significant an effect. In CNCP and DynCNET, the drone bids on every incoming task while it is not committed to a contract.
 
-The extension where drones that do not bid can respond with their reason is also supported. If a drone has no warehouse for which they can deliver the package for a cost below the fine, they declare themselves as ineligible. If a drone is delivering a package, it answers that it is busy and provides a lower limit of when the drone might become available again, based solely on the current distance to the client and not taking the distance to and from warehouses into account. If in CNET there is a valid bid for a task but it is not the lowest cost of all task announcements, it replies that it has given the task a low ranking. The client can use this information to delay task announcements if no drone is available or interested. More specifically, if all drones are busy or ineligible\commentV{maar als allemaal ineligible -> nextProposalTime wordt niet geset en uiteindelijk dus geen task announcements meer?}, the minimum of all estimated times when drones could become available again is taken as the next time for the task announcement. This reduces the number of messages that are sent by the client (and replies by the drones). If a drone gives the task a low ranking, the task announcement is immediately retried as other more interesting tasks will have been awarded and the remaining drones may now rank this task as the best.
+The extension where drones that do not bid can respond with their reason is also supported. If a drone has no warehouse for which they can deliver the package for a cost below the fine, they declare themselves as ineligible. If a drone is delivering a package, it answers that it is busy and provides a lower limit of when the drone might become available again, based solely on the current distance to the client and not taking the distance to and from warehouses into account. If in CNET there is a valid bid for a task but it is not the lowest cost of all task announcements, it replies that it has given the task a low ranking. The client can use this information to delay task announcements if no drone is available or interested. More specifically, if all drones are busy or ineligible, the minimum of all estimated times when drones could become available again is taken as the next time for the task announcement. This reduces the number of messages that are sent by the client (and replies by the drones). If a drone gives the task a low ranking, the task announcement is immediately retried as other more interesting tasks will have been awarded and the remaining drones may now rank this task as the best.
 
 A client waits one tick for bids to arrive. It sorts the incoming bids on the lowest cost to the drone (the company decides for the client which drone is best to deliver the package). All bids are satisfactory, as drones only bid on tasks that are economically viable. The task is then awarded to the best bidder. It informs the winning drone that they may start executing the task, and notifies the other bidding drones that their bid has been refused. In CNET, this means the drone can start bidding on other tasks again. Bids that would somehow arrive later will also be refused by the client.
 
 In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. The drone then chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients. The tasks are not queued, but released for other drones to fulfil, as delivery takes too long for queueing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task.
 
-Once a drone has received a task, it starts executing the task by flying to the warehouse \proposalV{the lowest estimated cost (that was calculated when bidding)}. It picks up the package at the warehouse and can possibly charge its battery there to make sure that it can complete the delivery, either until it must leave or until the battery is sufficiently charged to minimize the risk of failure. It then flies to the client, delivers the package and flies to the closest warehouse to charge and wait for new tasks. The client is sent a message when the package is picked up and when it is delivered.
+Once a drone has received a task, it starts executing the task by flying to the warehouse with the lowest estimated cost (that was calculated when bidding). It picks up the package at the warehouse and can possibly charge its battery there to make sure that it can complete the delivery, either until it must leave or until the battery is sufficiently charged to minimize the risk of failure. It then flies to the client, delivers the package and flies to the closest warehouse to charge and wait for new tasks. The client is sent a message when the package is picked up and when it is delivered.
 
 In DynCNET, during the phase where the drone is flying to the warehouse to pick up the package, both the drone and the client are allowed to continue negotiations with other agents, respectively by submitting bids and sending out task announcements. When a drone has been awarded a task with a lower cost than its current task, it cancels the task and notifies that task's client. This client will then reannounce the task. Inversely, if a client can award the task to another drone whose task is lower, it will cancel the contract with the drone that was previously awarded the task. This drone will then start bidding on other tasks. Only when the drone has picked up the package, will both the client and the drone fully commit to the contract and stop negotiating until the package has been delivered.
 
 In case the drone would crash, the notification of this failure to the client is modeled by sending one last signal to the client. In practice, outside a simulator, a polling approach might be used. After the client is aware of the failure, the client announces the task again.
 
-
-
-\commentV{customers arrive randomly}
 \commentY{Warehouses randomly algorithm beschrijven}
 
 \outline{\begin{itemize}
